removed errors(ROLE in config)

--- a/PP_3_1_2_Boot_Security-master/src/main/resources/templates/index.html
+++ b/PP_3_1_2_Boot_Security-master/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
         <tbody>
         <tr th:each="index : ${index}">
             <td th:text="${index.getId()}"></td>
-            <td th:text="${index.getName()}"></td>
+            <td th:text="${index.getUsername()}"></td>
         </tr>
         </tbody>
     </table>
