--- a/PP_3_1_2_Boot_Security-master/src/main/resources/templates/users.html
+++ b/PP_3_1_2_Boot_Security-master/src/main/resources/templates/users.html
@@ -16,7 +16,7 @@
         <tbody>
         <tr th:each="users : ${users}">
             <td th:text="${users.getId()}"></td>
-            <td th:text="${users.getName()}"></td>
+            <td th:text="${users.getUsername()}"></td>
         </tr>
         </tbody>
     </table>
