--- a/PP_3_1_2_Boot_Security-master/src/main/resources/templates/edit.html
+++ b/PP_3_1_2_Boot_Security-master/src/main/resources/templates/edit.html
@@ -7,7 +7,7 @@
 <body>
 <form th:method="PATCH" th:action="@{/users/{id}(id=${user.getId()})}" th:object="${user}">
     <label for="name"> Enter name:</label>
-    <input type="text" th:field="*{name}" id="name"/>
+    <input type="text" th:field="*{username}" id="name"/>
 
     <br/>
 
