--- a/PP_3_1_2_Boot_Security-master/src/main/resources/templates/new.html
+++ b/PP_3_1_2_Boot_Security-master/src/main/resources/templates/new.html
@@ -8,7 +8,7 @@
 
 <form th:method="POST" th:action="@{/users}" th:object="${user}">
   <label for="name"> Enter name:</label>
-  <input type="text" th:field="*{name}" id="name"/>
+  <input type="text" th:field="*{username}" id="name"/>
 
   <br/>
 
