--- a/PP_3_1_2_Boot_Security-master/src/main/resources/templates/new.html
+++ b/PP_3_1_2_Boot_Security-master/src/main/resources/templates/new.html
@@ -6,9 +6,11 @@
 </head>
 <body>
 
-<form th:method="POST" th:action="@{/users}" th:object="${user}">
+<form th:method="POST" th:action="@{/admins}" th:object="${user}">
   <label for="name"> Enter name:</label>
   <input type="text" th:field="*{username}" id="name"/>
+  <label for="passw"> Enter password:</label>
+  <input type="text" th:field="*{password}" id="passw"/>
 
   <br/>
 
